# Resume_Projects

./: .gitignore  README.md
Chat Server and Apps/Android Chat App/app/: build.gradle
Chat Server and Apps/Android Chat App/gradle/wrapper/: gradle-wrapper.properties
Chat Server and Apps/HTTP Server/: Dockerfile  build.gradle
Chat Server and Apps/HTTP Server/Test/: httpRequestTest.java
Chat Server and Apps/HTTP Server/resources/: chatEntry.js  chatEntryStyle.css  test.html  testJavascript.js
Chat Server and Apps/HTTP Server/src/: MessageHandling.java  Room.java  Server.java  httpRequest.java  httpResponse.java
Chat Server and Apps/Server_Using_Spring/Spring_Server/: build.gradle
Chat Server and Apps/Server_in_Javascript/: entrypointfile.js  formatting.css  package-lock.json  package.json  webchatentry.html
Chat Server and Apps/Web Chat Client/: db.db
Chat Server and Apps/Web Chat Client/resources/: chatEntry.js  chatEntryStyle.css
MSDScript/Install/Documentation/html/: annotated.html  class_add_cont.html  (+79 more)
MSDScript/Install/Intrepretor Install/: CMakeLists.txt  Library Guide.md  User Guide.md  cont.cpp  cont.hpp  env.cpp  env.hpp  expr.cpp  expr.hpp  main.cpp  parse.cpp  parse.hpp  pointer.hpp  step.cpp  step.hpp  value.cpp  value.hpp
TLSlite/: CASignedServerCertificate.pem  CAcertificate.pem  CAprivateKey.pem  README.md  client.csr  clientPrivate.key  clientPrivateKey.der  clientsignedCertificate.pem  index.txt  index.txt.old  server.csr  serverPrivate.key  serverPrivateKey.der
TLSlite/src/: Client.java  Message.java  Server.java  TLSBase.java
(+118 files in other folders)
